--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
-.App {
+body {
   font-family: sans-serif;
-  text-align: center;
+  background: linear-gradient(89deg, #ff5edf 0%, #04c8de 100%);
+}
+
+.particles {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
